# video-generator

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Justfile  Makefile  README.md  Untitled-1  cloudbuild.yaml  compress.sh  config.dev.yaml  config.prod.yaml  config.yaml  cover.py  desabafo.yaml  env.example  history_prompt.txt  main.py  new_config.yaml  preview.yaml  pyproject.toml  pytest.ini  reddit.yaml  requirements.txt  test.py  vinganca.yaml  yb_channel.yaml
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
assets/: tiktok_seed_lessons.md
aws/: polly.py
bots/: base.py  image_story_bot.py  interactive_bot.py  run_all.py  satisfying_bot.py  two_part_history_bot.py
config/: base.yaml  language.yaml  tiktok_cookies.txt
core/: history.py  video_generator.py
deploy/: video-bot.service
docs/: architecture.md  configuration.md  quickstart.md
editor/: audio_clip.py  image_clip.py
entities/: base_yaml_model.py  captions.py  config.py  cover.py  history.py  reddit.py  reddit_history.py  reddit_post.py  reddit_video.py
entities/editor/: audio_clip.py  captions_clip.py  image_clip.py  subtitle_clip.py  video_clip.py
flask/templates/: index.html
flask_server/: app.py  entities.py  helper.py  progress.py  worker.py
flask_server/static/: config_styles.css
flask_server/templates/: config.html  history_details.html  index.html
google/: gemini.py  youtube.py
histories/00dacc0f-e3dd-4163-bbb4-81e0b0533bca/: captions.yaml
histories/29a64b68-8dc1-455b-9eed-06b1432d4281/: history.yaml
histories/68582afd-39c2-4f8d-b0a5-de21aeea65bd/: captions.yaml  history.yaml
histories/8d6318d0-1099-4154-a5ab-125cb93f1a84/: captions.yaml  history.yaml
histories/98e45654-2d5a-45b8-8f00-1ebcdd9563f9/: history.yaml
histories/baabd120-f552-49df-97f1-c7f62e9c148a/: captions.yaml
histories/c79b80e0-0f0a-47d7-a9af-ce3947aa8960/: history.yaml
histories/d87c64f6-d637-4570-9667-3e185dd5d313/: captions.yaml  history.yaml
histories/ed5a91a5-d7f2-4b0d-a174-1ab4a409d002/: history.yaml
proxies/: azure_proxy.py  gemini_proxy.py  google_proxy.py  open_api_proxy.py  polly_proxy.py  reddit_proxy.py  whisper_proxy.py  youtube_proxy.py
sample_image_story_video/: captions_part1.json  captions_part2.json  image_story_part1.json  image_story_part2.json  original_post.md  story.md
scripts/: daily_auto_publish.py  evaluate_story.py  find_best_stories.py  generate_call_to_action.py  image_story_video.py  list_posts.py  publish_tiktok.py  reddit_two_part_history.py  server-tiktok-vnc-bootstrap.sh  test_filters.py  test_image_story.py  test_youtube_filter.py  tiktok_repl.py
services/: captions_service.py  config_service.py  cover_service.py  history_service.py  language_service.py  speech_service.py  video_service.py
services/caption_service/: __init__.py  caption_helper.py  captioning.py  helper.py
specs/001-stronger-video-hooks/: baseline-gancho.md  data-model.md  plan.md  quickstart.md  research.md  results-after.json  results-baseline.json  results-repair.json  spec.md  tasks.md
src/: main_fastapi.py
src/api/: dependencies.py
src/core/: config.py  container.py  logging_config.py  proglog_logger.py  secrets.py
src/entities/: base_yaml_model.py  captions.py  config.py  history.py  image_story.py  language.py  progress.py  reddit.py  reddit_history.py  reddit_post.py  speech_voice.py  (+2 more)
tests/: script_youtube_download.py  test_factories.py  test_json_reddit_proxy.py  test_publish_slots.py  test_pytube_proxy.py  test_tiktok_publisher_proxy.py  test_transcription_enhance.py  test_translation_pipeline.py  test_two_part_story.py
(+168 files in other folders)
